Rewound to commit b90026e6ae3fdca52b01e8a4b7621825f1d6a986 + 0 edits

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       property="og:image"
       content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/uycrpj.gif?v=1705309497280"
     />
-<!--    <link rel="stylesheet" href="textwall.cc/static/textwall.css" />-->
-<!--    <script src="/warning.js"></script> -->
+    <link rel="stylesheet" href="/static/textwall.css" />
+    <script src="/warning.js"></script>
   </head>
-  <body><!--
+  <body>
     <script>
       var $buoop = {
         required: { e: -4, f: 111, o: 96, s: 8, c: 111 },
@@ -68,7 +68,7 @@
       } catch (e) {
         window.attachEvent("onload", $buo_f);
       }
-    </script>-->
+    </script>
     <textarea id="clipboard"></textarea>
     <textarea
       id="textarea"
@@ -396,7 +396,7 @@
           <input id="deletewall" type="button" value="Delete wall" />
           <small>(Dangerous!)</small>
         </div>
-        <!--<div>
+        <div>
           <h3>Debug</h3>
           <button onclick="disconnectfromServer()">
             Disconnect from server
@@ -416,7 +416,7 @@
               console.log("Manual ping (debug)");
             }
           </script>
-        </div>-->
+        </div>
         <div id="admin">
           <h3>Admin</h3>
           <p>Sorry, not sure what you're trying to find.</p>
@@ -465,22 +465,22 @@
           <img alt="home" src="/static/home.svg" />
         </div>
         <div id="copy" title="Copy Selection" class="infobtn">
-          <img id="copyico" alt="copy" src="https://textwall.cc/static/copy.svg" />
+          <img id="copyico" alt="copy" src="/static/copy.svg" />
         </div>
         <div id="paste" title="Paste" class="infobtn">
-          <img id="pasteico" alt="paste" src="https://textwall.cc/static/paste.svg" />
+          <img id="pasteico" alt="paste" src="/static/paste.svg" />
         </div>
         <div id="openmenu" title="Colors" class="infobtn">
-          <img alt="color" src="https://textwall.cc/static/palette.svg" />
+          <img alt="color" src="/static/palette.svg" />
         </div>
         <div id="options" title="Options" class="infobtn">
-          <img alt="options" src="https://textwall.cc/static/settings.svg" />
+          <img alt="options" src="/static/settings.svg" />
         </div>
         <div id="theme" title="Theme" class="infobtn">
-          <img id="themeico" alt="theme" src="https://textwall.cc/static/sun.svg" />
+          <img id="themeico" alt="theme" src="/static/sun.svg" />
         </div>
         <div id="goto" title="Teleport" class="infobtn">
-          <img alt="arrow" src="https://textwall.cc/static/go.svg" />
+          <img alt="arrow" src="/static/go.svg" />
         </div>
         <div title="Discord" class="infobtn">
           <a href="https://discord.gg/rNAQaF8FDs" target="_blank"
@@ -500,26 +500,26 @@
     </div>
     <div id="decorations">
       <div class="decoration" id="bold">
-        <img alt="bold" title="bold" src="https://textwall.cc/static/bold.svg" />
+        <img alt="bold" title="bold" src="/static/bold.svg" />
       </div>
       <div class="decoration" id="italic">
-        <img alt="italic" title="italic" src="https://textwall.cc/static/italic.svg" />
+        <img alt="italic" title="italic" src="/static/italic.svg" />
       </div>
       <div class="decoration" id="underline">
-        <img alt="underline" title="underline" src="https://textwall.cc/static/underline.svg" />
+        <img alt="underline" title="underline" src="/static/underline.svg" />
       </div>
       <div class="decoration" id="strikethrough">
         <img
           alt="strikethrough"
           title="strikethrough"
-          src="https://textwall.cc/static/strikethrough.svg"
+          src="/static/strikethrough.svg"
         />
       </div>
     </div>
-    <script src="https://textwall.cc/static/colors.js"></script>
-    <script src="https://textwall.cc/static/pep.min.js"></script>
-    <script src="https://textwall.cc/static/textwall.js"></script>
-    <!-- <script src="/static/discordlogin.js"></script> -->
+    <script src="/static/colors.js"></script>
+    <script src="/static/pep.min.js"></script>
+    <script src="/static/textwall.js"></script>
+    <script src="/static/discordlogin.js"></script>
     <script>
       /*if ('serviceWorker' in navigator) {
 		window.addEventListener('load', function() {
@@ -527,7 +527,7 @@
 		});
 		}*/
     </script>
-    <script>
+    <script defer>
       console.log("if you're seeing this, the html should have loaded");
     </script>
   </body>
