🕵🍍 Checkpoint ./public/cat/index.html:51974198/16284 ./index.html:51974198/10

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 		});
 		}*/
     </script>
-    <script defer>
+    <script>
       console.log("if you're seeing this, the html should have loaded");
     </script>
   </body>
