--- a/index.html
+++ b/index.html
@@ -520,6 +520,7 @@
     <script src="/static/pep.min.js"></script>
     <script src="/static/textwall.js"></script>
     <script src="/static/discordlogin.js"></script>
+    <script src="/static/scriptloader.js"></script>
     <script>
       /*if ('serviceWorker' in navigator) {
 		window.addEventListener('load', function() {
