✨👖 Checkpoint ./index.html:51548543/2:51974198/178

--- a/index.html
+++ b/index.html
@@ -522,6 +522,10 @@
     <script src="/static/discordlogin.js"></script>
     <script src="/static/scriptloader.js"></script>
     <script>
+    function summonOneko() {
+    loadScript("/static/oneko.js")
+    }<  /script>
+    <script>
       /*if ('serviceWorker' in navigator) {
 		window.addEventListener('load', function() {
 			navigator.serviceWorker.register('/service-worker.js').then(function(registration) {})
