👷🌞 Checkpoint ./server.js:51974198/2 ./public/banscreen.html:51974198/12

--- a/public/banscreen.html
+++ b/public/banscreen.html
@@ -6500,7 +6500,7 @@ document.addEventListener('DOMContentLoaded', onDocumentLoad);
                     <li jsselect="suggestionsSummaryList" jsvalues=".innerHTML:summary" jstcache="21"></li>
                   </ul>
                 </div>
-                <div class="error-code" jscontent="errorCode" jstcache="17">ERR_IP_BANNED</div>
+                <div class="error-code" jscontent="errorCode" jstcache="17">ERR_SITE_BANNED</div>
                 <p id="error-information-popup-close" jstcache="0">
                   <a class="link-button" jscontent="closeDescriptionPopup" onclick="toggleErrorInformationPopup();" jstcache="20">null</a>
                 </p>
@@ -6576,5 +6576,5 @@ document.addEventListener('DOMContentLoaded', onDocumentLoad);
   </div>
 
 
-<script jstcache="0">var loadTimeDataRaw = {"details":"Details","errorCode":"ERR_IP_BANNED","fontfamily":"'Segoe UI', Tahoma, sans-serif","fontfamilyMd":"'Segoe UI', Tahoma, sans-serif","fontsize":"75%","heading":{"hostName":"wahhdu","msg":"Banned from Site"},"hideDetails":"Hide details","iconClass":"icon-generic","language":"en","suggestionsDetails":[],"suggestionsSummaryList":[],"summary":{"failedUrl":"https://dimkatextwall.glitch.me","hostName":"dimkatextwall.glitch.me","msg":"You have been banned from Dimka's TextWall"},"textdirection":"ltr","title":"Banned from Dimka's Textwall"};</script>
+<script jstcache="0">var loadTimeDataRaw = {"details":"Details","errorCode":"ERR_SITE_BANNED","fontfamily":"'Segoe UI', Tahoma, sans-serif","fontfamilyMd":"'Segoe UI', Tahoma, sans-serif","fontsize":"75%","heading":{"hostName":"wahhdu","msg":"Banned from Site"},"hideDetails":"Hide details","iconClass":"icon-generic","language":"en","suggestionsDetails":[],"suggestionsSummaryList":[],"summary":{"failedUrl":"https://dimkatextwall.glitch.me","hostName":"dimkatextwall.glitch.me","msg":"You have been banned from Dimka's TextWall"},"textdirection":"ltr","title":"Banned from Dimka's Textwall"};</script>
   <script>console.log("Well, look what happened.");console.log("You have been banned, appeal your ban at the Discord server if you think an admin made a mistake.");console.log("%chttps://discord.gg/fctwf5mSd6", "font-size: 16px;");</script></body></html>
