💍🐥 Checkpoint ./index.html:51974198/105

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/uycrpj.gif?v=1705309497280"
     />
     <link rel="stylesheet" href="/static/textwall.css" />
+    <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="/warning.js"></script>
   </head>
   <body>
