👫🗼 Checkpoint ./public/static/oneko.js:51974198/11712 ./public/index.html:51974198/101

--- a/public/index.html
+++ b/public/index.html
@@ -364,8 +364,8 @@
         </div>
         <div>
           <h2>Miscellaneous</h2>
-          <br />
           <button onclick="summonOneko();">Summon Oneko</button><br />
+          <button onclick="joinDiscord();">Join Discord server</button>
         </div>
 
         <div id="wallsettings">
