--- a/public/index.html
+++ b/public/index.html
@@ -364,8 +364,14 @@
         </div>
         <div>
           <h2>Miscellaneous</h2>
-          <button onclick="summonOneko();">Summon Oneko</button><br />
-          <button onclick="joinDiscord();">Join Discord server</button>
+          <button onclick="summonOneko();">Summon an Oneko cat</button><br />
+          <button onclick="joinDiscord();"><img 
+                                                src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/discord.svg"
+                                                height="16"
+                                                width="16"
+                                                
+       
+                                                > Join our Discord server</button>
         </div>
 
         <div id="wallsettings">
