🐉😬 Checkpoint ./public/index.html:51974198/187 ./public/maintenance.html:51974198/6605

--- a/public/index.html
+++ b/public/index.html
@@ -364,14 +364,13 @@
         </div>
         <div>
           <h2>Miscellaneous</h2>
-          <button onclick="summonOneko();">Summon an Oneko cat</button><br />
-          <button onclick="joinDiscord();"><img 
+          <button onclick="summonOneko();">Summon an Oneko cat</button><br /><br />
+          <button onclick="joinDiscord();" style="background-color: #5865F2; color: #FFFFFF;">
+            <img 
                                                 src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/discord.svg"
                                                 height="16"
                                                 width="16"
-                                                
-       
-                                                > Join our Discord server</button>
+                                                style=""> Join our Discord server</button>
         </div>
 
         <div id="wallsettings">
