🍬⏰ Checkpoint ./public/index.html:51974198/4

--- a/public/index.html
+++ b/public/index.html
@@ -406,8 +406,8 @@
               <input
                 id="inputmember"
                 placeholder="username"
-                type="text
-                maxlength=24"
+                type="text"
+                maxlength="24"
                 minlength="1"
               /><input id="addmemberbtn" value="Add" type="submit" /><br />
             </form>
