🌾🌮 Checkpoint ./server.js:51974198/13 ./public/mail.html:51974198/141

--- a/public/mail.html
+++ b/public/mail.html
@@ -43,6 +43,7 @@
         message.selectionStart = message.value.length - 21;
         message.selectionEnd = message.value.length;
       };
+      document.getElementById("message").innerHTML = "mail from " + localStorage.getItem("username") + ": please";
     </script>
   </body>
 </html>
