👕🎷 Checkpoint ./public/index.html:51974198/458

--- a/public/index.html
+++ b/public/index.html
@@ -364,13 +364,18 @@
         </div>
         <div>
           <h2>Miscellaneous</h2>
-          <button onclick="summonOneko();">Summon an Oneko cat</button><br /><br />
+          <button onclick="summonOneko();">Summon an Oneko cat</button><br />
           <button onclick="joinDiscord();" style="background-color: #5865F2; color: #FFFFFF;">
             <img 
                                                 src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/discord.svg"
                                                 height="16"
-                                                width="16"
-                                                style=""> Join our Discord server</button>
+                                                width="16"> Join our Discord server</button>
+          <a href="/download.html"><button style="background-color: #FFFFFF;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Android_robot_head.svg/120px-Android_robot_head.svg.png"
+                 height="16"
+                 width="16">
+            Download Android App
+          </button></a>
         </div>
 
         <div id="wallsettings">
