😋💧 Checkpoint ./public/download.html:51974198/509

--- a/public/download.html
+++ b/public/download.html
@@ -2,18 +2,27 @@
   <head>
     <title>Download the App</title>
   </head>
-  <body><center>
-    <h1>
-      Download the App
-    </h1>
-    <small><a href="/">(go back)</a></small>
-    <h2>
-      Desktop
-    </h2>
-    <p>
-      (You need Chrome or an Chromium browser.)<br>
-      Click the small desktop (with an download icon) icon and click Install.
-      <img>
-    </p>
-</center></body>
+  <body style="background-color: #000000; color: #ffffff">
+    <center>
+      <h1>Download the App</h1>
+      <small><a href="/">(go back)</a></small>
+      <h2>Desktop</h2>
+      <p>
+        (You need Chrome or an Chromium browser.)<br />
+        Click the small desktop (with an download icon) icon and click
+        Install.<br />
+      </p>      
+      <img
+          src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/0201dae5-9014-4635-b8ad-ad9905c83b23.image.png"
+        />
+      <h2>
+        Android
+      </h2>
+      <p>
+        Download the app <a href="https://files.catbox.moe/tcpcr7.apk">here</a><br />
+        After you have downloaded it, follow the steps:<br />
+        
+      </p>
+    </center>
+  </body>
 </html>
