🙎🗺 Checkpoint ./public/download.html:51974198/93

--- a/public/download.html
+++ b/public/download.html
@@ -26,7 +26,7 @@
         Step 2: Tap "Install".<br />
         <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916487144341574/IMG_20240208_001617.jpg"><br />
         Step 2.5: If Google Play Protect blocks you, just tap "Details" and "Install Anyway".<br />
-        <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916487396270170/IMG_20240208_002241.jpg?ex=65d678ec&is=65c403ec&hm=5fa8ee02c70a7dc03929db738c02a8fb87c65eecc3efc490c9da13a5f9405964&"><br />
+        <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916487396270170/IMG_20240208_002241.jpg"><br />
         Step 3: You're done! Tap "Done" if you wanna open the app later or tap "Open" if you wanna open it right now.
       </p>
     </center>
