🏤👨‍❤️‍👨 Checkpoint ./public/download.html:51974198/161

--- a/public/download.html
+++ b/public/download.html
@@ -22,11 +22,11 @@
         Download the app <a href="https://files.catbox.moe/tcpcr7.apk">here</a><br />
         After you have downloaded it, follow the steps:<br />
         Step 1: Open the downloaded file.<br />
-        <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916486930694164/IMG_20240208_001330.jpg"><br />
+        <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916486930694164/IMG_20240208_001330.jpg" width="40%" height="25%"><br />
         Step 2: Tap "Install".<br />
-        <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916487144341574/IMG_20240208_001617.jpg"><br />
+        <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916487144341574/IMG_20240208_001617.jpg" width="13%" height="50%"><br />
         Step 2.5: If Google Play Protect blocks you, just tap "Details" and "Install Anyway".<br />
-        <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916487396270170/IMG_20240208_002241.jpg"><br />
+        <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916487396270170/IMG_20240208_002241.jpg" width="15%" height="50%"><br />
         Step 3: You're done! Tap "Done" if you wanna open the app later or tap "Open" if you wanna open it right now.
       </p>
     </center>
