🐫🐥 Checkpoint ./server.js:51974198/21 ./public/download.html:51974198/91

--- a/public/download.html
+++ b/public/download.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Download the App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body style="background-color: #000000; color: #ffffff">
     <center>
@@ -25,7 +26,7 @@
         <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916486930694164/IMG_20240208_001330.jpg" width="510" height="161"><br />
         Step 2: Tap "Install".<br />
         <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916487144341574/IMG_20240208_001617.jpg" width="512" height="1024"><br />
-        Step 2.5: If Google Play Protect blocks you, just tap "Details" and "Install Anyway".<br />
+        Step 2.5: If Google Play Protect blocks the app, just tap "Details" and "Install Anyway".<br />
         <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916487396270170/IMG_20240208_002241.jpg" width="488" height="855"><br />
         Step 3: You're done! Tap "Done" if you wanna open the app later or tap "Open" if you wanna open it right now.
       </p>
