🔑👠 Checkpoint ./public/download.html:51974198/63

--- a/public/download.html
+++ b/public/download.html
@@ -2,6 +2,7 @@
   <head>
     <title>Download the App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Dimka">
   </head>
   <body style="background-color: #000000; color: #ffffff">
     <center>
