⛈😂 Checkpoint ./public/index.html:51974198/161

--- a/public/index.html
+++ b/public/index.html
@@ -365,6 +365,7 @@
         <div>
           <h2>Miscellaneous</h2>
           <button onclick="summonOneko();">Summon an Oneko cat</button><br />
+          <button onclick="onekoDisaster()">ONEKO DISASTER!</button><br />
           <button onclick="joinDiscord();" style="background-color: #5865F2; color: #FFFFFF;">
             <img 
                                                 src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/discord.svg"
@@ -561,7 +562,7 @@
         } else oneko();
       }
       function onekoDisaster() {
-        setInterval(summonOneko, 5000);
+        setInterval(summonOneko, 2000);
       }
     </script>
     <script>
