👠👝 Checkpoint ./public/index.html:51974198/8

--- a/public/index.html
+++ b/public/index.html
@@ -382,7 +382,7 @@
             Client Message
           </h3>
           <small><strong>NOTE</strong>: Only you can see the message</small><br />
-          <textarea id="clienttell" placeholder="Put anything here, and the client will say it in the chat!"></textarea>
+          <textarea id="clienttell" placeholder="Put anything here, and the client will say it in the chat!"></textarea><br />
           <button onclick="clientTell()">
            Submit! 
           </button>
