💐👘 Checkpoint ./server.js:51974198/15 ./public/index.html:51974198/115

--- a/public/index.html
+++ b/public/index.html
@@ -460,6 +460,9 @@
           ><input id="l" type="checkbox" checked="false" /><br />
           <input type="text" id="t" /><br />
           <input id="refresh" value="Refresh" type="button" /><br />
+          <button onclick="client.chat.send(&quot;/stop&quot;);">
+            
+          </button>
           <textarea id="alerttext" placeholder="Announce a thing"></textarea
           ><br />
           <input id="sendalert" value="Send" type="button" /><br />
