💏📙 Checkpoint ./public/index.html:51974198/17

--- a/public/index.html
+++ b/public/index.html
@@ -461,8 +461,8 @@
           <input type="text" id="t" /><br />
           <input id="refresh" value="Refresh" type="button" /><br />
           <button onclick="client.chat.send(&quot;/stop&quot;);">
-            
-          </button>
+            Stop server
+          </button><br />
           <textarea id="alerttext" placeholder="Announce a thing"></textarea
           ><br />
           <input id="sendalert" value="Send" type="button" /><br />
