--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
     />
     <meta name="google" content="notranslate" />
+    <meta name="application-name" content="Dimka's TextWall">
     <title>Dimka's TextWall</title>
     <link
       rel="icon"
