🕋⛹ Checkpoint ./server.js:51974198/49 ./public/index.html:51974198/7 ./public/static/textwall.js:51974198/30 ./public/static/textwall.css:51974198/4 ./public/misc/textwalldeco.js:51974198/300

--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
         <input id="showchat" type="checkbox" /><label for="showchat" id="showcht"
           >Show chat</label
         ><br id="newlineshowchat">
-        <input id="disablecolour" type="checkbox" /><label for="disablecolour"
+        <input id="disablecolor" type="checkbox" /><label for="disablecolor"
           >Disable color</label
         ><br />
         <input id="smoothpanning" type="checkbox" /><label for="smoothpanning"
@@ -148,7 +148,7 @@
         <input id="smoothcursors" type="checkbox" /><label for="smoothcursors"
           >Smooth cursors</label
         ><br />
-        <input id="copycolour" type="checkbox" /><label for="copycolour"
+        <input id="copycolor" type="checkbox" /><label for="copycolor"
           >Copy colors</label
         ><br />
         <input id="copydecorations" type="checkbox" /><label
@@ -426,8 +426,8 @@
           <input id="disablechat" type="checkbox" /><label for="disablechat"
             >Disable chat</label
           ><br />
-          <input id="walldisablecolour" type="checkbox" /><label
-            for="walldisablecolour"
+          <input id="walldisablecolor" type="checkbox" /><label
+            for="walldisablecolor"
             >Disable color</label
           ><br />
           <input id="disablebraille" type="checkbox" /><label
@@ -502,7 +502,7 @@
         <div id="closemenu">
           <img alt="cancel" src="/static/cancel.svg" />
         </div>
-        <div id="colourlist"></div>
+        <div id="colorlist"></div>
       </div>
     </div>
     <div id="connecting">
