🐷⛳️ Checkpoint ./public/index.html:51974198/906 ./server.js:51974198/1

--- a/public/index.html
+++ b/public/index.html
@@ -372,6 +372,11 @@
                                                 src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/discord.svg"
                                                 height="14"
                                                 width="14"> Join our Discord server</button>
+          <a href="/mail.html" target="_blank"><button style="background-color: #000000; color: #FFFFFF">
+            <img src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/email-5-24.png"
+                 height="16"
+                 width="16"> Send mail
+          </button></a>
           <a href="/download.html"><button style="background-color: #FFFFFF;">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Android_robot_head.svg/120px-Android_robot_head.svg.png"
                  height="11"
@@ -538,22 +543,14 @@
         </div>
         <div id="goto" title="Teleport" class="infobtn">
           <img alt="arrow" src="/static/go.svg" />
-        </div>
+        </div><!--
         <div title="Discord" class="infobtn">
           <a href="https://discord.gg/rNAQaF8FDs" target="_blank"
             ><img
               alt="discord"
               src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/discord.svg"
               style="width: 20px; padding-top: 4.85px"
-          /></a>
-        </div>
-        <div title="Send Mail" class="infobtn">
-          <a href="/mail.html" target="_blank">
-            <img
-              alt="mail"
-              src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/email-5-24.png"
-              style="padding-top: 4.85px"
-          /></a>
+          /></a>-->
         </div>
       </div>
     </div>
