👂🏡 Checkpoint ./public/index.html:51974198/36

--- a/public/index.html
+++ b/public/index.html
@@ -543,14 +543,16 @@
         </div>
         <div id="goto" title="Teleport" class="infobtn">
           <img alt="arrow" src="/static/go.svg" />
-        </div><!--
+        </div>
+<!--
         <div title="Discord" class="infobtn">
           <a href="https://discord.gg/rNAQaF8FDs" target="_blank"
             ><img
               alt="discord"
               src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/discord.svg"
               style="width: 20px; padding-top: 4.85px"
-          /></a>-->
+          /></a>
+-->
         </div>
       </div>
     </div>
