🙇⛰ Checkpoint ./public/index.html:51974198/84

--- a/public/index.html
+++ b/public/index.html
@@ -414,6 +414,7 @@
 
         <div id="wallsettings">
           <h1>Wall Actions</h1>
+          <a href="/static/WallGuide.pdf" target="_blank">Wall Guide</a<br />
           <input id="protect" type="checkbox" /><label for="protect"
             >Protect</label
           ><br />
