--- a/public/index.html
+++ b/public/index.html
@@ -414,7 +414,7 @@
 
         <div id="wallsettings">
           <h1>Wall Actions</h1>
-          <a href="/static/WallGuide.pdf" target="_blank">Wall Guide</a<br />
+          <a href="/static/WallGuide.pdf" target="_blank"><p>Wall Guide</p></a><br />
           <input id="protect" type="checkbox" /><label for="protect"
             >Protect</label
           ><br />
