--- a/public/download.html
+++ b/public/download.html
@@ -24,11 +24,11 @@
         Download the app <a href="https://files.catbox.moe/tcpcr7.apk">here</a><br />
         After you have downloaded it, follow the steps:<br />
         Step 1: Open the downloaded file.<br />
-        <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916486930694164/IMG_20240208_001330.jpg" width="510" height="161"><br />
+        <img src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/IMG_20240208_001330.jpg" width="510" height="161"><br />
         Step 2: Tap "Install".<br />
-        <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916487144341574/IMG_20240208_001617.jpg" width="512" height="1024"><br />
+        <img src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/IMG_20240208_001617.jpg" width="512" height="1024"><br />
         Step 2.5: If Google Play Protect blocks the app, just tap "Details" and "Install Anyway".<br />
-        <img src="https://cdn.discordapp.com/attachments/1196359694185398282/1204916487396270170/IMG_20240208_002241.jpg" width="488" height="855"><br />
+        <img src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/IMG_20240208_002241.jpg" width="488" height="855"><br />
         Step 3: You're done! Tap "Done" if you wanna open the app later or tap "Open" if you wanna open it right now.
       </p>
     </center>
